--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ description = "The compiler constants"
 
 [lib]
 doctest = false
+
+[dependencies.inkwell]
+git = "ssh://git@github.com/matter-labs-forks/inkwell"
+branch = "master"
+default-features = false
+features = ["llvm11-0", "target-syncvm"]
